# copier-nuxt-static-aws

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  copier.yml  mutex_queue  pyproject.toml  pyrightconfig.json  ruff.toml  ty.toml
.claude/settings/permissions/: bash.jsonc  write.jsonc
.devcontainer/: devcontainer.json  docker-compose.yml  install-ci-tooling.py  manual-setup-deps.py  manual-setup-deps.sh  on-create-command.sh  post-start-command.sh  windows-host-helper.sh
.github/reusable_workflows/: build-docker-image.yaml
.github/workflows/: ci.yaml  hash_git_files.py  pre-commit.yaml
copier_tasks/: remove_graphql_lambda_hooks.py  remove_uv_check_graphql_lambda_hook.py
copier_template_resources/: eslint.config.mjs
extensions/: context.py
src/copier_tasks/: ensure_pnpm_minimum_release_age_exclude.py
template/: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md.jinja  pnpm-workspace.yaml  pnpm-workspace.yaml.jinja  pyrightconfig.json
template/.devcontainer/: Dockerfile  create-aws-profile.sh.jinja  devcontainer.json.jinja  docker-compose.yml.jinja  envs.json.jinja  manual-setup-deps.sh.jinja  manual-setup-deps.sh.jinja.rej
template/.github/: dependabot.yml.jinja
template/graphql_lambda/: pyproject.toml.jinja
template/infrastructure/: .python-version.jinja  pyproject.toml.jinja
template/{% if has_backend %}graphql_lambda{% endif %}/: .python-version.jinja  pyproject.toml.jinja
template/{{ app_name }}_app/: nuxt.config.ts.jinja  package.json.jinja
tests/copier_data/: data1.yaml  data2.yaml
(+14 files in other folders)
