[project]
name = "copier-nuxt-static-aws"
version = "0.1.0"
description = "Template for creating a Static Website using Nuxt frontend hosted on AWS"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    # Specific to this template


    # Managed by upstream template
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "pyright[nodejs]>=1.1.409",
    "ty>=0.0.40",
    "copier==9.15.1",
    "copier-template-extensions==0.3.3"
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
exclude-newer = "1 day"
